src/styles/scrollbar.less
@import "./variables";

// Basic scrollbar styles

::-webkit-scrollbar {
  height: var(--scrollbar-size);
  width: var(--scrollbar-size);
}

::-webkit-scrollbar-track {
  background-color: var(--scrollbar-track-color);
}

::-webkit-scrollbar-track-piece {
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  background-color: rgba(0, 0, 0, 0.45);
  border-radius: 100px;
  height: 100px;
}

// Disable scroll when modal or drawer is opened

@supported-browser: chrome;

html:has(.ant-drawer-open, .ant-modal) {
  overflow: clip !important;

  &.scrollable.@{supported-browser} > body {
    width: calc(100% - var(--scrollbar-size));
  }
}

// Scroll customizations for specific components

.ant-select-tree-list-holder,
.rc-virtual-list-holder {
  overflow: auto !important;
}

.ant-select-tree-list-scrollbar,
.rc-virtual-list-scrollbar {
  display: block !important;
  visibility: hidden;
}

.ant-select-tree-list-scrollbar-thumb-moving {
  display: block !important;
}

